--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
         </h1>
 
         <p class="hero-subtitle">
-            Andere reden über KI. Wir machen sie zum Wachstumsmotor Ihres Unternehmens.
+            Wir machen KI zum Wachstumsmotor Ihres Unternehmens.
         </p>
 
         <div class="hero-stats">
