--- a/index.html
+++ b/index.html
@@ -911,10 +911,10 @@
                                 <path d="M19 10v2a7 7 0 0 1-14 0v-2M12 19v4M8 23h8"></path>
                             </svg>
                         </div>
-                        <h3 class="service-title">Events & Speaker</h3>
+                        <h3 class="service-title">Workshops & Speaker</h3>
                     </div>
                     <p class="service-description">
-                        Keynotes, die hängen bleiben. Workshops, die wirken. Inspirierende Bühnenauftritte, die Teams motivieren und neue Perspektiven eröffnen.
+                        Workshops, die hängen bleiben. Keynotes, die wirken. Inspirierende Events, die Teams motivieren und neue Perspektiven eröffnen.
                     </p>
                 </div>
 
@@ -1135,7 +1135,7 @@
                     <p>21244 Buchholz</p>
                     <p>Deutschland</p>
                     <p class="impressum-email">
-                        E-Mail: <span class="email-protected">mail<span class="spam-protect">&#64;</span>ki-projexx<span class="spam-protect">&#46;</span>de</span>
+                        E-Mail: <span class="email-protected">mathias<span class="spam-protect">&#64;</span>ki-projexx<span class="spam-protect">&#46;</span>de</span>
                     </p>
                 </div>
             </div>
