--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             "@type": "Offer",
             "itemOffered": {
               "@type": "Service",
-              "name": "Events & Speaker",
+              "name": "Workshops & Speaker",
               "description": "KI-Keynotes und Workshops für Teams"
             }
           },
@@ -1142,7 +1142,7 @@
                         <h3 class="service-title">Events & Speaker</h3>
                     </div>
                     <p class="service-description">
-                        Keynotes, die hängen bleiben. Workshops, die wirken. Inspirierende Bühnenauftritte über KI im Marketing, die Teams motivieren und neue Perspektiven eröffnen.
+                        Workshops, die wirken. Inspirierende Events, die Teams motivieren und neue Perspektiven eröffnen.
                     </p>
                 </div>
 
@@ -1350,7 +1350,7 @@
                     <p>21244 Buchholz in der Nordheide</p>
                     <p>Deutschland</p>
                     <p class="impressum-email">
-                        E-Mail: <span class="email-protected">mail<span class="spam-protect">&#64;</span>ki-projexx<span class="spam-protect">&#46;</span>de</span>
+                        E-Mail: <span class="email-protected">mathias<span class="spam-protect">&#64;</span>ki-projexx<span class="spam-protect">&#46;</span>de</span>
                     </p>
                 </div>
             </div>
