--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
             "@type": "Offer",
             "itemOffered": {
               "@type": "Service",
-              "name": "KI im Marketing",
-              "description": "KI-Beratung für Marketing-Effizienz, Content-Generierung und personalisierte Kampagnen"
+              "name": "KI im Marketing & Vertrieb",
+              "description": "KI-Beratung für Marketing-/Sales-Effizienz, Content-Generierung und personalisierte Kampagnen"
             }
           },
           {
@@ -1027,7 +1027,7 @@
         </h1>
 
         <p class="hero-subtitle">
-            Ihr KI-Berater für Marketing, Werbung & Kommunikation in Hamburg, Nordheide und Norddeutschland.
+            Ihr KI-Berater für Marketing, Werbung & Kommunikation, based in Buchholz/Nordheide/Hamburg.
         </p>
 
         <div class="hero-stats">
@@ -1079,10 +1079,10 @@
                                 <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
                             </svg>
                         </div>
-                        <h3 class="service-title">KI in Kommunikation</h3>
+                        <h3 class="service-title">KI in der Kommunikation</h3>
                     </div>
                     <p class="service-description">
-                        Optimieren Sie Ihre interne und externe Kommunikation mit maßgeschneiderten KI-Lösungen. Von automatisierten Antworten bis zu intelligenten Chatbots für effiziente Kundenkommunikation.
+                        Optimieren Sie Ihre interne und externe Kommunikation mit maßgeschneiderten KI-Lösungen. Von automatisierten Newslettern bis zu intelligenten Chatbots für effiziente Kundenkommunikation.
                     </p>
                 </div>
 
@@ -1094,10 +1094,10 @@
                                 <path d="M17 6h6v6"></path>
                             </svg>
                         </div>
-                        <h3 class="service-title">KI im Marketing</h3>
+                        <h3 class="service-title">KI im Sales & Marketing</h3>
                     </div>
                     <p class="service-description">
-                        Steigern Sie Ihre Marketing-Effizienz mit KI-gestützten Tools. Content-Generierung, Zielgruppen-Analyse, personalisierte Kampagnen und automatisierte Marketing-Workflows.
+                        Steigern Sie Ihre Umsätze mit KI-gestützten Tools. Content-Generierung, Zielkunden-Analyse, personalisierte Kampagnen und automatisierte Marketing-Workflows.
                     </p>
                 </div>
 
@@ -1127,7 +1127,7 @@
                         <h3 class="service-title">KI Readiness Assessment</h3>
                     </div>
                     <p class="service-description">
-                        Ermitteln Sie Ihren KI-Reifegrad und entwickeln Sie eine maßgeschneiderte Roadmap für Ihre KI-Transformation. Strukturierte Analyse und konkrete Handlungsempfehlungen.
+                        Ermitteln Sie Ihren KI-Reifegrad und entwickeln Sie eine maßgeschneiderte Roadmap für Ihre KI-Transformation. Strukturierte Analyse und konkrete Handlungsempfehlungen für Prozessoptimierungn.
                     </p>
                 </div>
 
@@ -1142,7 +1142,7 @@
                         <h3 class="service-title">Events & Speaker</h3>
                     </div>
                     <p class="service-description">
-                        Workshops, die wirken. Inspirierende Events, die Teams motivieren und neue Perspektiven eröffnen.
+                        Workshops, die wirken. Inspirierende Events, die Teams motivieren und neue Perspektiven zum Thema KI aufzeigen.
                     </p>
                 </div>
 
@@ -1157,7 +1157,7 @@
                         <h3 class="service-title">KI Workshops – EU AI Act</h3>
                     </div>
                     <p class="service-description">
-                        Bereiten Sie Ihr Unternehmen auf den EU AI Act vor. Compliance-Workshops, Risikobewertung und praktische Umsetzungsstrategien für die neue KI-Verordnung.
+                        Bereiten Sie Ihre Mitarbeitenden auf den EU AI Act vor. Compliance-Workshops (inkl. Zertifikat), Risikobewertung und praktische Umsetzungsstrategien für die neue KI-Verordnung.
                     </p>
                 </div>
             </div>
@@ -1247,7 +1247,7 @@
                             <svg class="chevron-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <polyline points="9 18 15 12 9 6"></polyline>
                             </svg>
-                            Informationen zu 46 Krankheiten
+                            Die häufigsten Hunde-Krankheiten
                         </li>
                         <li>
                             <svg class="chevron-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -1303,19 +1303,19 @@
                             <svg class="chevron-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <polyline points="9 18 15 12 9 6"></polyline>
                             </svg>
-                            Optimierungsvorschläge
+                            3D Visualierung 
                         </li>
                         <li>
                             <svg class="chevron-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <polyline points="9 18 15 12 9 6"></polyline>
                             </svg>
-                            Raumplanung
+                            Raumplanung & Interior-Design
                         </li>
                         <li>
                             <svg class="chevron-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <polyline points="9 18 15 12 9 6"></polyline>
                             </svg>
-                            Expertentipps
+                            3D Küchenplanung 
                         </li>
                     </ul>
                     <div class="scan-line"></div>
