--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@
                         <h3 class="service-title">KI Readiness Assessment</h3>
                     </div>
                     <p class="service-description">
-                        Ermitteln Sie Ihren KI-Reifegrad und entwickeln Sie eine maßgeschneiderte Roadmap für Ihre KI-Transformation. Strukturierte Analyse und konkrete Handlungsempfehlungen für Prozessoptimierungn.
+                        Ermitteln Sie Ihren KI-Reifegrad und entwickeln Sie eine maßgeschneiderte Roadmap für Ihre KI-Transformation. Strukturierte Analyse und konkrete Handlungsempfehlungen für Prozessoptimierungen.
                     </p>
                 </div>
 
