--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>KI-ProjexX - KI-Beratung Hamburg, Nordheide & Lüneburger Heide | AI Marketing & Kommunikation</title>
     <meta name="title" content="KI-ProjexX - KI-Beratung Hamburg, Nordheide & Lüneburger Heide">
     <meta name="description" content="IHK-zertifizierte KI-Beratung für Marketing, Werbung & Kommunikation in Hamburg, Buchholz, Nordheide. KI-Manager (IHK) für digitale Transformation, KI-Workshops und EU AI Act Compliance in Norddeutschland.">
-    <meta name="keywords" content="KI-Beratung Hamburg, KI Berater Nordheide, KI Consulting Buchholz, AI Marketing, KI in der Werbung, KI Kommunikation, KI Workshop Lüneburger Heide, Künstliche Intelligenz 21244, KI Beratung Marketing, AI Consultant Norddeutschland, IHK-zertifiziert, KI-Manager IHK, IHK KI-Berater, zertifizierte KI-Beratung">
+    <meta name="keywords" content="KI-Beratung Hamburg, KI Berater Nordheide, KI Consulting Buchholz, AI Marketing, KI in der Werbung, KI Kommunikation, KI Workshop Lüneburger Heide, Künstliche Intelligenz 21244, KI Beratung Marketing, AI Consultant Norddeutschland, IHK-zertifiziert, KI-Manager IHK, IHK KI-Berater, KI Prozessoptimierung, zertifizierte KI-Beratung">
     <meta name="author" content="Mathias Schulz">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://ki-projexx.de">
