--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
             background-image: url('./M_Schulz.png');
             background-size: cover;
             background-position: center;
-            opacity: 0.18;
+            opacity: 0.;
             filter: grayscale(100%) contrast(1.4) brightness(1.2);
             mask-image: radial-gradient(ellipse at center right, rgba(0,0,0,0.5) 0%, transparent 65%);
             -webkit-mask-image: radial-gradient(ellipse at center right, rgba(0,0,0,0.5) 0%, transparent 65%);
